apps/default/web-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web-server
  template:
    metadata:
      labels:
        app: my-web-server
    spec:
      containers:
      - name: my-web-server
        image: nginx:latest
        ports:
        - containerPort: 80
