apps/default/web-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-server-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: my-web-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
