apps/default/web-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web-server-ingress
  namespace: default
  labels:
    cilium.io/ingress: "true"
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-web-server-service
            port:
              number: 80
